@@ -1020,8 +1020,13 @@ public class UpdateLog implements PluginInfoInitialized, SolrMetricProducer {
       // if the newerDoc has this field, then this field from olderDoc can be ignored
       if (!newerDoc.containsKey(fieldName)
           && (mergeFields == null || mergeFields.contains(fieldName))) {
-        for (Object val : olderDoc.getFieldValues(fieldName)) {
-          newerDoc.addField(fieldName, val);
+        Collection<Object> values = olderDoc.getFieldValues(fieldName);
+        if (values == null) {
+          newerDoc.addField(fieldName, null);
+        } else {
+          for (Object val : values) {
+            newerDoc.addField(fieldName, val);
+          }
         }
       }
     }
