@@ -98,6 +98,9 @@ Bug Fixes
 
 * SOLR-17074: Fixed not correctly escaped quote in bin/solr script (Dominique Béjean, Vincenzo D'Amore)
 
+* SOLR-17120: Fix NullPointerException in UpdateLog.applyOlderUpdates that can occur if there are multiple partial
+  updates of the same document in separate requests using commitWithin. (Calvin Smith, Christine Poerschke)
+
 Dependency Upgrades
 ---------------------
 * PR#2055: Update org.mockito:mockito* from v5.5.0 to v5.8.0 (solrbot)
